# ACADOS_Example

./: .gitignore  README.md
c/: CMakeLists.txt
c/src/: mobile_robot_app.cpp  mobile_robot_app.h
python/: draw.py  mobile_robot_acados_ocp.json  mobile_robot_model.py  mobile_robot_opt.py
python/c_generated_code/: Makefile  acados_sim_solver_mobile_robot.c  acados_sim_solver_mobile_robot.h  acados_solver_mobile_robot.c  acados_solver_mobile_robot.h  acados_solver_sfunction_mobile_robot.c  main_mobile_robot.c  main_sim_mobile_robot.c  make_sfun_mobile_robot.m
python/c_generated_code/mobile_robot_model/: mobile_robot_expl_ode_fun.c  mobile_robot_expl_vde_adj.c  mobile_robot_expl_vde_forw.c  mobile_robot_model.h
